# rust-fixedtimefixedpoint

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
example/: main.rs
ftfp-sys/: Makefile  pseudofunctions.c  stdio.h
src/: binding.rs  lib.rs
