[package]
name = "ftfp"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example"
path = "example/main.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.53"
