[package]
name = "ftfp"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example"
path = "example/main.rs"

[features]
sgx = []

[dependencies]
libc = "0.2"
num-traits = "0.2"
ndarray = "0.13"
paste = "1"
